--- a/naive_bayes_classifier.ipynb
+++ b/naive_bayes_classifier.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.86\n",
-      "({'TP': 50, 'TN': 36, 'FP': 1, 'FN': 13}, {'precision_ham': 0.9803921568627451, 'precision_spam': 0.7346938775510204, 'recall_ham': 0.7936507936507936, 'recall_spam': 0.972972972972973, 'f_score_ham': 0.8771929824561403, 'f_score_spam': 0.8372093023255813})\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "#### Creating the dictionary of ham and spam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "import glob\n",
     "import math\n",
@@ -38,6 +40,93 @@
     "                words[line] += 1\n",
     "            count += 1\n",
     "    return words, count\n",
+    "\n",
+    "\n",
+    "ham = \"./data/ham/*\"\n",
+    "spam = \"./data/spam/*\"\n",
+    "dict_ham, total_ham = count_words(ham)\n",
+    "dict_spam, total_spam = count_words(spam)\n",
+    "total_words = total_ham + total_spam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Calculates the probabilities necessary to implement the Naive Bayes classifier.\n",
+    "Adds the P(word|class) to the dictionary of words and returns P(class) and P(unseen_word) \n",
+    "\"\"\"\n",
+    "def calculate_probabilities(total_words, total_class, words, is_ham=False):\n",
+    "    for word in words:\n",
+    "        curr_count = words[word] + ALPHA\n",
+    "        log_prob = math.log(curr_count/(total_class + (V * ALPHA)))\n",
+    "        words[word] = log_prob\n",
+    "    \n",
+    "    prob_class = math.log(total_class/total_words)\n",
+    "    prob_unseen_class = ALPHA/(total_class +(V*ALPHA))\n",
+    "    prob_unseen_class = math.log(prob_unseen_class)\n",
+    "\n",
+    "    return prob_class, prob_unseen_class\n",
+    "\n",
+    "\n",
+    "prob_ham, prob_unseen_ham = calculate_probabilities(total_words, total_ham, dict_ham, True)\n",
+    "prob_spam, prob_unseen_spam = calculate_probabilities(total_words, total_spam, dict_spam)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Populating the truth table (for confusion matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Extracts the names of the files that should be \"Spam\". \n",
+    "Returns a set with the files that should be classified as \"Spam.\"\n",
+    "\"\"\"\n",
+    "def populate_truth(directory):\n",
+    "    truth = set()\n",
+    "\n",
+    "    for filename in glob.glob(directory):\n",
+    "        f = open(filename)\n",
+    "        for line in f.readlines():\n",
+    "            line = line.strip(\"\\n\")\n",
+    "            truth.add(line)\n",
+    "    return truth\n",
+    "\n",
+    "truth_file = \"./data/truthfile*\"\n",
+    "truth_table = populate_truth(truth_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running the Model with Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "\"\"\"\n",
     "Runs the naive bayes model by adding to the total probability of ham and spam, respectively.\n",
@@ -90,35 +179,162 @@
     "\n",
     "    return classification, 1 - (differences/total_email)\n",
     "\n",
-    "\"\"\"\n",
-    "Extracts the names of the files that should be \"Spam\". \n",
-    "Returns a set with the files that should be classified as \"Spam.\"\n",
-    "\"\"\"\n",
-    "def populate_truth(directory):\n",
-    "    truth = set()\n",
     "\n",
-    "    for filename in glob.glob(directory):\n",
-    "        f = open(filename)\n",
-    "        for line in f.readlines():\n",
-    "            line = line.strip(\"\\n\")\n",
-    "            truth.add(line)\n",
-    "    return truth\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Accuracy: 0.86\n",
+      "\n",
+      "\n",
+      " Results: \n",
+      "\n",
+      "89 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "74 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "31 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "49 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "90 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "28 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "50 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "15 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "9 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "100 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "52 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "17 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "92 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "76 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "33 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "72 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "37 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "56 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "13 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "96 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "69 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "94 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "54 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "11 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "70 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "35 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "93 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "16 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "53 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "8 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "32 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "77 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "48 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "88 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "30 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "75 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "14 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "51 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "91 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "29 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "10 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "55 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "68 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "95 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "34 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "71 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "36 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "73 {'classification': 'Ham', 'truth': 'Spam'}\n",
+      "97 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "12 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "57 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "66 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "23 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "42 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "82 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "38 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "80 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "40 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "64 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "21 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "99 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "2 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "59 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "60 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "25 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "18 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "6 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "84 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "79 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "44 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "46 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "86 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "4 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "62 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "27 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "41 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "39 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "81 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "58 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "3 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "20 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "65 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "98 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "22 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "67 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "1 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "83 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "43 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "87 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "47 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "26 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "63 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "5 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "7 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "19 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "24 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "61 {'classification': 'Ham', 'truth': 'Ham'}\n",
+      "45 {'classification': 'Spam', 'truth': 'Spam'}\n",
+      "85 {'classification': 'Spam', 'truth': 'Ham'}\n",
+      "78 {'classification': 'Ham', 'truth': 'Ham'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = \"./data/test/*\"\n",
+    "results, accuracy = run_model(test, dict_spam, prob_spam, prob_unseen_spam, \n",
+    "                                dict_ham, prob_ham, prob_unseen_ham, truth_table)\n",
     "\n",
-    "\"\"\"\n",
-    "Calculates the probabilities necessary to implement the Naive Bayes classifier.\n",
-    "Adds the P(word|class) to the dictionary of words and returns P(class) and P(unseen_word) \n",
-    "\"\"\"\n",
-    "def calculate_probabilities(total_words, total_class, words, is_ham=False):\n",
-    "    for word in words:\n",
-    "        curr_count = words[word] + ALPHA\n",
-    "        log_prob = math.log(curr_count/(total_class + (V * ALPHA)))\n",
-    "        words[word] = log_prob\n",
-    "    \n",
-    "    prob_class = math.log(total_class/total_words)\n",
-    "    prob_unseen_class = ALPHA/(total_class +(V*ALPHA))\n",
-    "    prob_unseen_class = math.log(prob_unseen_class)\n",
+    "print(\"\\nAccuracy: \" + str(accuracy) + \"\\n\")\n",
     "\n",
-    "    return prob_class, prob_unseen_class\n",
+    "print(\"\\n Results: \\n\")\n",
+    "\n",
+    "for key, val in results.items():\n",
+    "    print(key, val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculating Precision, Recall, F-Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "({'TP': 50, 'TN': 36, 'FP': 1, 'FN': 13}, {'precision_ham': 0.9803921568627451, 'precision_spam': 0.7346938775510204, 'recall_ham': 0.7936507936507936, 'recall_spam': 0.972972972972973, 'f_score_ham': 0.8771929824561403, 'f_score_spam': 0.8372093023255813})\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "\"\"\"\n",
     "After the classifier is run, obtains the metrics of precision, recall, and f-score as well as the confusion matrix.\n",
@@ -156,39 +372,9 @@
     "  \n",
     "    return confusion_matrix, metrics\n",
     "\n",
-    "def main():\n",
-    "    ham = \"./data/ham/*\"\n",
-    "    spam = \"./data/spam/*\"\n",
-    "    test = \"./data/test/*\"\n",
-    "    truth_file = \"./data/truthfile*\"\n",
     "\n",
-    "    dict_ham, total_ham = count_words(ham)\n",
-    "    dict_spam, total_spam = count_words(spam)\n",
-    "    total_words = total_ham + total_spam\n",
-    "\n",
-    "    prob_ham, prob_unseen_ham = calculate_probabilities(total_words, total_ham, dict_ham, True)\n",
-    "    prob_spam, prob_unseen_spam = calculate_probabilities(total_words, total_spam, dict_spam)\n",
-    "\n",
-    "    truth_table = populate_truth(truth_file)\n",
-    "\n",
-    "    results, accuracy = run_model(test, dict_spam, prob_spam, prob_unseen_spam, \n",
-    "                                    dict_ham, prob_ham, prob_unseen_ham, truth_table)\n",
-    "    \n",
-    "    print(\"Accuracy: \" + str(accuracy))\n",
-    "    print(get_metrics(results))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "main()\n"
+    "print(get_metrics(results))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
