--- a/naive_bayes_classifier.ipynb
+++ b/naive_bayes_classifier.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### Creating the dictionary of ham and spam"
+    "###Creating the dictionary of ham and spam"
    ]
   },
   {
