--- a/naive_bayes_classifier.ipynb
+++ b/naive_bayes_classifier.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###Creating the dictionary of ham and spam"
+    "#Creating the Dictionary of Ham and Spam"
    ]
   },
   {
