--- a/naive_bayes_classifier.ipynb
+++ b/naive_bayes_classifier.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Creating the Dictionary of Ham and Spam"
+    "#Naive Bayes Spam Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Creating the Dictionary of Ham and Spam"
    ]
   },
   {
@@ -51,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Training the Model"
+    "###Training the Model"
    ]
   },
   {
@@ -85,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Populating the truth table (for confusion matrix)"
+    "###Populating the truth table (for confusion matrix)"
    ]
   },
   {
@@ -116,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Running the Model with Test Data"
+    "###Running the Model with Test Data"
    ]
   },
   {
@@ -316,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculating Precision, Recall, F-Score"
+    "###Calculating Precision, Recall, F-Score"
    ]
   },
   {
