--- a/naive_bayes_classifier.ipynb
+++ b/naive_bayes_classifier.ipynb
@@ -365,15 +365,11 @@
     "                confusion_matrix[\"FP\"] += 1\n",
     "    metrics = {}\n",
     "\n",
-    "    metrics[\"precision_ham\"] = confusion_matrix[\"TP\"] / (confusion_matrix[\"TP\"] + confusion_matrix[\"FP\"])\n",
-    "    metrics[\"precision_spam\"] = confusion_matrix[\"TN\"] / (confusion_matrix[\"TN\"] + confusion_matrix[\"FN\"])\n",
-    "    metrics[\"recall_ham\"] = confusion_matrix[\"TP\"] / (confusion_matrix[\"TP\"] + confusion_matrix[\"FN\"])\n",
-    "    metrics[\"recall_spam\"] = confusion_matrix[\"TN\"] / (confusion_matrix[\"TN\"] + confusion_matrix[\"FP\"])\n",
+    "    metrics[\"precision\"] = confusion_matrix[\"TP\"] / (confusion_matrix[\"TP\"] + confusion_matrix[\"FP\"])\n",
+    "    metrics[\"recall\"] = confusion_matrix[\"TP\"] / (confusion_matrix[\"TP\"] + confusion_matrix[\"FN\"])\n",
     "\n",
-    "    metrics[\"f_score_ham\"] = \\\n",
-    "        (2 * metrics[\"recall_ham\"] * metrics[\"precision_ham\"]) / (metrics[\"precision_ham\"] + metrics[\"recall_ham\"])\n",
-    "    metrics[\"f_score_spam\"] = \\\n",
-    "        (2 * metrics[\"recall_spam\"] * metrics[\"precision_spam\"]) / (metrics[\"precision_spam\"] + metrics[\"recall_spam\"])\n",
+    "    metrics[\"f_score\"] = \\\n",
+    "        (2 * metrics[\"recall\"] * metrics[\"precision\"]) / (metrics[\"precision\"] + metrics[\"recall\"])\n",
     "  \n",
     "    return confusion_matrix, metrics\n",
     "\n",
