updated notebook formatting

--- a/naive_bayes/naive_bayes_classifier.ipynb
+++ b/naive_bayes/naive_bayes_classifier.ipynb
@@ -1,20 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "# Naive Bayes Classifier (Ham or Spam Emails)\n",
+    "\n",
     "#### Creating the dictionary of ham and spam"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
@@ -53,12 +51,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Training the Model"
+    "#### Training the Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,12 +85,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Populating the truth table (for confusion matrix)"
+    "#### Populating the truth table (for confusion matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,12 +116,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Running the Model with Test Data"
+    "#### Running the Model with Test Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -318,19 +316,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculating Precision, Recall, F-Score"
+    "#### Calculating Precision, Recall, F-Score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "({'TP': 50, 'TN': 36, 'FP': 1, 'FN': 13}, {'precision_ham': 0.9803921568627451, 'precision_spam': 0.7346938775510204, 'recall_ham': 0.7936507936507936, 'recall_spam': 0.972972972972973, 'f_score_ham': 0.8771929824561403, 'f_score_spam': 0.8372093023255813})\n"
+      "({'TP': 50, 'TN': 36, 'FP': 1, 'FN': 13}, {'precision': 0.9803921568627451, 'recall': 0.7936507936507936, 'f_score': 0.8771929824561403})\n"
      ]
     }
    ],
@@ -360,21 +358,24 @@
     "                confusion_matrix[\"FP\"] += 1\n",
     "    metrics = {}\n",
     "\n",
-    "    metrics[\"precision_ham\"] = confusion_matrix[\"TP\"] / (confusion_matrix[\"TP\"] + confusion_matrix[\"FP\"])\n",
-    "    metrics[\"precision_spam\"] = confusion_matrix[\"TN\"] / (confusion_matrix[\"TN\"] + confusion_matrix[\"FN\"])\n",
-    "    metrics[\"recall_ham\"] = confusion_matrix[\"TP\"] / (confusion_matrix[\"TP\"] + confusion_matrix[\"FN\"])\n",
-    "    metrics[\"recall_spam\"] = confusion_matrix[\"TN\"] / (confusion_matrix[\"TN\"] + confusion_matrix[\"FP\"])\n",
+    "    metrics[\"precision\"] = confusion_matrix[\"TP\"] / (confusion_matrix[\"TP\"] + confusion_matrix[\"FP\"])\n",
+    "    metrics[\"recall\"] = confusion_matrix[\"TP\"] / (confusion_matrix[\"TP\"] + confusion_matrix[\"FN\"])\n",
+    "    \n",
+    "    metrics[\"f_score\"] = \\\n",
+    "        (2 * metrics[\"recall\"] * metrics[\"precision\"]) / (metrics[\"precision\"] + metrics[\"recall\"])\n",
     "\n",
-    "    metrics[\"f_score_ham\"] = \\\n",
-    "        (2 * metrics[\"recall_ham\"] * metrics[\"precision_ham\"]) / (metrics[\"precision_ham\"] + metrics[\"recall_ham\"])\n",
-    "    metrics[\"f_score_spam\"] = \\\n",
-    "        (2 * metrics[\"recall_spam\"] * metrics[\"precision_spam\"]) / (metrics[\"precision_spam\"] + metrics[\"recall_spam\"])\n",
-    "  \n",
     "    return confusion_matrix, metrics\n",
     "\n",
     "\n",
     "print(get_metrics(results))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
