fixed notebook formatting

--- a/naive_bayes/naive_bayes_classifier.ipynb
+++ b/naive_bayes/naive_bayes_classifier.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Naive Bayes Classifier (Ham or Spam Emails)\n",
     "\n",
-    "#### Creating the dictionary of ham and spam"
+    "### Creating the dictionary of ham and spam"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Training the Model"
+    "### Training the Model"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Populating the truth table (for confusion matrix)"
+    "### Populating the truth table (for confusion matrix)"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Running the Model with Test Data"
+    "### Running the Model with Test Data"
    ]
   },
   {
@@ -316,7 +316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Calculating Precision, Recall, F-Score"
+    "### Calculating Precision, Recall, F-Score"
    ]
   },
   {
@@ -369,13 +369,6 @@
     "\n",
     "print(get_metrics(results))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
